kubernetes-debug/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw13
  namespace: homework
  labels:
    app: hw13
spec:
  selector:
    matchLabels:
      app: hw13
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 33%
      maxUnavailable: 33%
  template:
    metadata:
      labels:
        app: hw13
    spec:
      containers:
        - name: nginx
          image: kyos0109/nginx-distroless
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          # readinessProbe:
            # httpGet:
            #   scheme: HTTP
            #   path: /index.html
            #   port: 80
            # initialDelaySeconds: 5
            # periodSeconds: 5
          volumeMounts:
            - name: workdir
              mountPath: /homework
      # These containers are run during pod initialization
      dnsPolicy: Default
      volumes:
        - name: workdir
          emptyDir: {}
