kubernetes-debug/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw13
  namespace: homework
  labels:
    app: hw13
spec:
  # sessionAffinity: ClientIP
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
  selector:
    app: hw13
